<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/delete_confirmation_dialog_layout_padding"
    android:background="@drawable/dialog_custom_delete_background">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_confirmation_text_1"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        android:textSize="@dimen/delete_confirmation_text_size"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="DELETE"
            android:textStyle="bold"
            android:textSize="@dimen/delete_confirmation_text_size"
            android:textColor="@color/red"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=" this Happy Place?"
            android:textStyle="bold"
            android:textSize="@dimen/delete_confirmation_text_size"
            android:textColor="@color/primary_text_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:text="@string/YES"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/color_primary_variant"/>
        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/NO"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@color/color_primary_variant"/>
    </LinearLayout>
</LinearLayout>